--- a/components/index.html
+++ b/components/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <!-- THIS WEBSITE IS MOSTLY RUN BY 36 LINES OF CSS (1st), 22 LINES OF JAVASCRIPT (2nd) and 14 lines of HTML(-1 COMMENT AND 3rd PLACE OR LAST PLACE) MEANING 72 LINES OF CODE IN TOTAL-->
-    <header><button id="run">START</button></header>
+    <header><button id="run" class="run">START</button></header>
     <footer id="footer"></footer>
+    <div id="footerTwo"></div>
     <script src="../scripts/index.js" type="module"></script>
   </body>
 </html>
